tests/_data/example_submissions/compile_error/src.cpp
#include <stdio.h>
using namespace std;

//adds two numbers
int main(int argc, char **argv){
	int one, two
	scanf("%d %d", &one, &two);
	printf("%d\n", one+two);
}
